add RT weight parameter